# codemod-unittest-to-pytest-asserts

./: .gitignore  LICENSE  Makefile  README.rst  codemod_unittest_to_pytest_asserts.py  requirements.txt  setup.cfg  test.py  testcase-assertion-codemod.py
.github/workflows/: test.yml
codemod_unittest_to_pytest_asserts/: __init__.py  codemod_unittest_to_pytest_asserts.py
codemod_unittest_to_pytest_asserts/tests/: pytest_code.py  test_codemod.py  unittest_code.py
