[metadata]
name = codemod-unittest-to-pytest-asserts
version = 1.0.0
author = Hans-Wilhelm Warlo
author_email = hw@warlo.no
license = MIT
description = Codemod to refactor unittest assertions to pytest assertions.
url = https://github.com/hanswilw/codemod-unittest-to-pytest-asserts
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = False
py_modules = codemod_unittest_to_pytest_asserts
python_requires = >= 3.8
install_requires =
  codemod >= 1.0.0
  astunparse >= 1.6.2

[options.entry_points]
console_scripts =
    codemod-unittest-to-pytest-asserts = codemod_unittest_to_pytest_asserts:main
